--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -371,6 +371,8 @@
   <!-- Next Steps -->
   <h2>Next Steps</h2>
   <p>What do you want to do next with your app?</p>
+  <button type="button" class="btn btn-primary">Primary</button>
+
 
   <input type="hidden" #selection>
 
