--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
-<div class="container">
-<div>Doctolibre Office</div>
+
+  <nav class="navbar navbar-light" style="background-color: #e0f4ff;">
+    <a class="navbar-brand" href="#">
+      <img src="../assets/Doctolibroffice_logo.png">
+    </a>
+  </nav>
 <div class="row">
   <div class="col">
   <app-info-rdv></app-info-rdv>
@@ -7,5 +11,4 @@
   <div class="col">
   <app-prise-rdv></app-prise-rdv>
   </div>
-</div>
 </div>
