--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,11 +4,11 @@
       <img src="../assets/Doctolibroffice_logo.png">
     </a>
   </nav>
-<div class="row">
-  <div class="col">
+<div class="row mt-5 ml-5 mr-5">
+  <div class="col col-md-auto ">
   <app-info-rdv></app-info-rdv>
   </div>
-  <div class="col">
+  <div class="col ">
   <app-prise-rdv></app-prise-rdv>
   </div>
 </div>
