--- a/src/app/prise-rdv/prise-rdv.component.html
+++ b/src/app/prise-rdv/prise-rdv.component.html
@@ -1,1 +1,9 @@
-<p>prise-rdv works!</p>
+<div class="card ml-5" style="width: 40rem;">
+    <div class="card-body">
+      <h5 class="card-title">Demande de rendez-vous</h5>
+      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's lorem ipsim dolor sin ammet latinus vini vidi vici abyssum abyssum abyssatent.</p>
+      <a href="#" class="card-link">Card link</a>
+      <a href="#" class="card-link">Another link</a>
+    </div>
+  </div>
