--- a/src/app/prise-rdv/prise-rdv.component.html
+++ b/src/app/prise-rdv/prise-rdv.component.html
@@ -1,9 +1,41 @@
-<div class="card ml-5" style="width: 40rem;">
+<div class="card ml-5" style="width: 45rem;">
     <div class="card-body">
-      <h5 class="card-title">Demande de rendez-vous</h5>
-      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's lorem ipsim dolor sin ammet latinus vini vidi vici abyssum abyssum abyssatent.</p>
-      <a href="#" class="card-link">Card link</a>
-      <a href="#" class="card-link">Another link</a>
+        <div class="row">
+            <div class="col">
+                <form>
+                    <div class="form-group row">
+                      <label class="col-form-label">Nom</label>
+                      <div class="col">
+                        <input type="text" class="form-control-plaintext">
+                      </div>
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-form-label">Prénom</label>
+                        <div class="col">
+                          <input type="text" class="form-control-plaintext">
+                        </div>
+                      </div>
+                      <div class="form-group row">
+                        <label class="col-form-label">Tél.</label>
+                        <div class="col">
+                          <input type="number" class="form-control-plaintext">
+                        </div>
+                      </div>
+                      <div class="form-group row">
+                        <label class="col-form-label">Date de naissance</label>
+                        <div class="col">
+                            <input type="date" id="start" name="trip-start"
+                            value="2018-07-22"
+                            min="2000-01-01" max="3000-12-31">
+                        </div>
+                      </div>
+                   
+                  </form>
+
+            </div>
+            <div class="col">
+              2 of 2
+            </div>
+          </div>
     </div>
   </div>
