left panel part.2

--- a/src/app/prise-rdv/prise-rdv.component.html
+++ b/src/app/prise-rdv/prise-rdv.component.html
@@ -34,7 +34,38 @@
 
             </div>
             <div class="col">
-              2 of 2
+                <form>
+                    <div class="form-group">
+                      <label >Sélectionnez un médecin</label>
+                        <select class="form-control">
+                        <option>Médecin un</option>
+                        <option>Médecin deux</option>
+                        <option>Médecin trois</option>
+                        <option>Médecin quatre</option>
+                      </select>
+                    </div>
+                    <div class="form-group">
+                        <label >Sélectionnez une date de rdv</label>
+                        <div class="row">
+                        <div class="col">
+                          <select class="form-control">
+                          <option>18 sept</option>
+                          <option>19 sept</option>
+                          <option>20 sept</option>
+                          <option>21 sept</option>
+                        </select>
+                    </div>
+                    <div class="col">
+                        <select class="form-control">
+                            <option>11:15</option>
+                            <option>14:30</option>
+                            <option>16:00</option>
+                          </select>
+                        </div>
+                    </div>
+                      </div>
+                      <button type="button" class="btn btn-success float-right">Submit</button>
+                  </form>
             </div>
           </div>
     </div>
