Interface consultation de mes rdv

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
   <div class="col col-md-auto ">
   <app-info-rdv></app-info-rdv>
   </div>
-  <div class="col ">
+  <div class="col col-md-auto">
   <app-prise-rdv></app-prise-rdv>
   </div>
 </div>
