--- a/src/app/info-rdv/info-rdv.component.html
+++ b/src/app/info-rdv/info-rdv.component.html
@@ -1,10 +1,20 @@
-<div class="card" style="width: 18rem;">
-    <div class="card-body">
-      <h5 class="card-title">Mes demandes de rdv</h5>
-      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="card-link">Card link</a>
-      <a href="#" class="card-link">Another link</a>
+<div class="card" style="width: 25rem; background:#F5F5F5;">
+  <div class="card-body">
+    <h5 class="card-title" style="border-bottom:1px solid #D6D6D6; padding-bottom:15px;">Mes demandes de rendez-vous
+    </h5>
+    <div class="rdv" *ngFor="let rdv of rdvList">
+      <div *ngIf="rdv.statut == 'refuse'">
+        <img src="../assets/canceled.png">
+      </div>
+      <div *ngIf="rdv.statut == 'valide'">
+        <img src="../assets/validate.png">
+      </div>
+      <div *ngIf="rdv.statut == 'encours'">
+        <img src="../assets/wait.png">
+      </div>
+      {{rdv.date}} à {{rdv.heure}}<br />
+      <i>{{rdv.medecin}}</i>
     </div>
+
   </div>
-  
+</div>
