--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,20 @@
-/* You can add global styles to this file, and also import other style files */
+.rdv{
+    width:100%;
+    background:#fff;
+    border:1px solid #D6D6D6;
+    border-radius:5px;
+    padding:15px;
+    margin:10px 0px;
+}
+
+.rdv img{
+    width:50px;
+    float:right;
+}
+
+.rdv i{
+    font-style:normal;
+    letter-spacing:2px;
+    font-variant:small-caps;
+    font-weight:bold;
+}
