--- a/src/app/prise-rdv/prise-rdv.component.html
+++ b/src/app/prise-rdv/prise-rdv.component.html
@@ -2,23 +2,23 @@
     <div class="card-body">
         <div class="row">
             <div class="col">
-                <form>
+                <form [formGroup]="infoReservation">
                     <div class="form-group row">
                       <label class="col-form-label">Nom</label>
                       <div class="col">
-                        <input type="text" class="form-control-plaintext">
+                        <input type="text" class="form-control-plaintext" placeholder="jnojn" formControlName="firstName">
                       </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-form-label">Prénom</label>
                         <div class="col">
-                          <input type="text" class="form-control-plaintext">
+                          <input type="text" class="form-control-plaintext" formControlName="lastName">
                         </div>
                       </div>
                       <div class="form-group row">
                         <label class="col-form-label">Tél.</label>
                         <div class="col">
-                          <input type="number" class="form-control-plaintext">
+                          <input type="number" class="form-control-plaintext" formControlName="phone">
                         </div>
                       </div>
                       <div class="form-group row">
