--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,10 +5,11 @@
     </a>
   </nav>
 <div class="row mt-5 ml-5 mr-5">
-  <div class="col col-md-auto ">
+  <div class="col col-md-4">
   <app-info-rdv></app-info-rdv>
   </div>
-  <div class="col col-md-auto">
+  <div class="col col-md-1"></div>
+  <div class="col col-md-7" style="width:100%">
   <app-prise-rdv></app-prise-rdv>
   </div>
 </div>
