--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,20 @@
 .rdv{
     width:100%;
-    background:#fff;
-    border:1px solid #D6D6D6;
-    border-radius:5px;
+    background: linear-gradient(60deg, rgba(224,244,255,1) 73%, rgba(255,255,255,1) 100%);
     padding:15px;
     margin:10px 0px;
+    transition: all 0.5s ease-out;
+}
+
+.title{
+    text-transform:uppercase;
+    color:#1699E2;
+    font-weight:bold;
+    font-family:'Roboto', sans-serif;
+}
+
+.rdv:hover{
+    background:#B7E7F0;
 }
 
 .rdv img{
