--- a/src/app/prise-rdv/prise-rdv.component.html
+++ b/src/app/prise-rdv/prise-rdv.component.html
@@ -25,7 +25,7 @@
               <label class="col-form-label">Date de naissance</label>
               <div class="col">
                 <input type="date" class="form-control" id="start" name="trip-start" value="2018-07-22" min="2000-01-01"
-                  max="3000-12-31">
+                  max="3000-12-31" formControlName="phone">
               </div>
             </div>
           </form>
@@ -35,12 +35,10 @@
           <form>
             <div class="form-group">
               <label>Sélectionnez un médecin</label>
-              <select class="form-control">
-                <option>Médecin un</option>
-                <option>Médecin deux</option>
-                <option>Médecin trois</option>
-                <option>Médecin quatre</option>
-              </select>
+              <select formControlName="medecin" id="f">
+                <option value=null disabled selected>le medecin</option>
+                <option *ngFor="let item of medecins" >{{item}}</option>
+            </select>
             </div>
             <div class="form-group">
               <label>Sélectionnez une date de rendez-vous</label>
@@ -63,7 +61,7 @@
               </div>
             </div>
             <br />
-            <button type="submit" style="float:right;" class="btn btn-success">Valider</button>
+            <button type="submit" style="float:right;" class="btn btn-success" [disabled]="!infoReservation.valid">Valider</button>
           </form>
         </div>
       </div>
