--- a/src/app/prise-rdv/prise-rdv.component.html
+++ b/src/app/prise-rdv/prise-rdv.component.html
@@ -28,6 +28,12 @@
                   max="3000-12-31" formControlName="phone">
               </div>
             </div>
+            <div class="form-group row">
+              <label class="col-form-label">ID Unique</label>
+              <div class="col">
+                <input type="text" class="form-control" formControlName="lastName">
+              </div>
+            </div>
           </form>
 
         </div>
@@ -37,7 +43,7 @@
               <label>Sélectionnez un médecin</label>
               <select formControlName="medecin" id="f">
                 <option value=null disabled selected>le medecin</option>
-                <option *ngFor="let item of medecins" >{{item}}</option>
+                <option *ngFor="let item of practitioners" >{{item.family}}</option>
             </select>
             </div>
             <div class="form-group">
