--- a/src/app/prise-rdv/prise-rdv.component.html
+++ b/src/app/prise-rdv/prise-rdv.component.html
@@ -1,70 +1,73 @@
-      <h5 class="title" style="border-bottom:1px solid #D6D6D6; padding-bottom:15px;">Demande de rendez-vous
-      </h5>
-      <div class="row" style="padding:15px;">
+<h5 class="title" style="border-bottom:1px solid #D6D6D6; padding-bottom:15px;">Demande de rendez-vous
+</h5>
+<form [formGroup]="infoReservation">
+    <div class="row" style="padding:15px;">
         <div class="col">
-          <form [formGroup]="infoReservation">
-            <div class="form-group row">
-              <label class="col-form-label">Nom</label>
-              <div class="col">
-                <input type="text" class="form-control" placeholder="jnojn" formControlName="firstName">
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-form-label">Prénom</label>
-              <div class="col">
-                <input type="text" class="form-control" formControlName="lastName">
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-form-label">Tél.</label>
-              <div class="col">
-                <input type="number" class="form-control" formControlName="phone">
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-form-label">Date de naissance</label>
-              <div class="col">
-                <input type="date" class="form-control" id="start" name="trip-start" value="2018-07-22" min="2000-01-01"
-                  max="3000-12-31" formControlName="phone">
-              </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-form-label">ID Unique</label>
-              <div class="col">
-                <input type="text" class="form-control" formControlName="lastName">
-              </div>
-            </div>
-          </form>
 
-        </div>
-        <div class="col">
-          <form>
-            <div class="form-group">
-              <label>Sélectionnez un médecin</label>
-              <select formControlName="medecin" id="f">
-                <option value=null disabled selected>le medecin</option>
-                <option *ngFor="let item of practitioners" >{{item.family}}</option>
-            </select>
-            </div>
-            <div class="form-group">
-              <label>Sélectionnez une date de rendez-vous</label>
-              <div class="row">
+            <div class="form-group row">
+                <label class="col-form-label">Nom</label>
                 <div class="col">
-                  <select class="form-control">
+                    <input type="text" class="form-control" placeholder="jnojn" formControlName="firstName">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label class="col-form-label">Prénom</label>
+                <div class="col">
+                    <input type="text" class="form-control" formControlName="lastName">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label class="col-form-label">Tél.</label>
+                <div class="col">
+                    <input type="number" class="form-control" formControlName="phone">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label class="col-form-label">Date de naissance</label>
+                <div class="col">
+                    <input type="date" class="form-control" id="start" name="trip-start" value="2018-07-22"
+                        min="2000-01-01" max="3000-12-31" formControlName="phone">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label class="col-form-label">ID Unique</label>
+                <div class="col">
+                    <input type="text" class="form-control" formControlName="lastName">
+                </div>
+            </div>
+
+
+</div>
+<div class="col">
+
+    <div class="form-group">
+        <label>Sélectionnez un médecin</label>
+        <select formControlName="medecin" id="f">
+            <option value=null disabled selected>le medecin</option>
+            <option *ngFor="let item of practitioners">{{item.family}}</option>
+        </select>
+    </div>
+    <div class="form-group">
+        <label>Sélectionnez une date de rendez-vous</label>
+        <div class="row">
+            <div class="col">
+                <select class="form-control">
                     <option value=null disabled selected>date</option>
-                    <option *ngFor="let item of horaireDate" >{{item}}</option>
-                  </select>
-                </div>
-                <div class="col">
-                  <select class="form-control">
-                    <option value=null disabled selected>heure</option>
-                    <option *ngFor="let item of horaireHeure" >{{item}}</option>
-                  </select>
-                </div>
-              </div>
+                    <option *ngFor="let item of horaireDate">{{item}}</option>
+                </select>
             </div>
-            <br />
-            <button type="submit" style="float:right;" class="btn btn-success" [disabled]="!infoReservation.valid">Valider</button>
-          </form>
+            <div class="col">
+                <select class="form-control">
+                    <option value=null disabled selected>heure</option>
+                    <option *ngFor="let item of horaireHeure">{{item}}</option>
+                </select>
+            </div>
         </div>
-      </div>
+    </div>
+    <br />
+    <button type="submit" style="float:right;" class="btn btn-success"
+        [disabled]="!infoReservation.valid">Valider</button>
+
+</div>
+</div>
+</form>
