--- a/src/app/prise-rdv/prise-rdv.component.html
+++ b/src/app/prise-rdv/prise-rdv.component.html
@@ -51,10 +51,8 @@
         <label>Sélectionnez une date de rendez-vous</label>
         <div class="row">
             <div class="col">
-                <select class="form-control">
-                    <option value=null disabled selected>date</option>
-                    <option *ngFor="let item of horaireDate">{{item}}</option>
-                </select>
+                <input type="date" class="form-control" id="start" name="trip-start" 
+                        min="2000-01-01" max="3000-12-31" formControlName="phone">
             </div>
             <div class="col">
                 <select class="form-control">
