--- a/src/app/prise-rdv/prise-rdv.component.html
+++ b/src/app/prise-rdv/prise-rdv.component.html
@@ -1,6 +1,6 @@
 <h5 class="title" style="border-bottom:1px solid #D6D6D6; padding-bottom:15px;">Demande de rendez-vous
 </h5>
-<form [formGroup]="infoReservation">
+<form [formGroup]="infoReservation" (ngSubmit)="onSubmit()">
     <div class="row" style="padding:15px;">
         <div class="col">
 
@@ -23,13 +23,6 @@
                 </div>
             </div>
             <div class="form-group row">
-                <label class="col-form-label">Date de naissance</label>
-                <div class="col">
-                    <input type="date" class="form-control" id="start" name="trip-start" value="2018-07-22"
-                        min="2000-01-01" max="3000-12-31" formControlName="phone">
-                </div>
-            </div>
-            <div class="form-group row">
                 <label class="col-form-label">ID Unique</label>
                 <div class="col">
                     <input type="text" class="form-control" formControlName="lastName">
@@ -44,7 +37,7 @@
         <label>Sélectionnez un médecin</label>
         <select class="form-control" formControlName="medecin" id="f">
             <option value=null disabled selected>le medecin</option>
-            <option *ngFor="let item of practitioners">{{item.family}}</option>
+            <option *ngFor="let item of practitioners">{{item.name[0].family}}</option>
         </select>
     </div>
     <div class="form-group">
@@ -52,10 +45,10 @@
         <div class="row">
             <div class="col">
                 <input type="date" class="form-control" id="start" name="trip-start" 
-                        min="2000-01-01" max="3000-12-31" formControlName="phone">
+                        min="2000-01-01" max="3000-12-31" formControlName="phone" formControlName="jour">
             </div>
             <div class="col">
-                <select class="form-control">
+                <select class="form-control" formControlName="heure">
                     <option value=null disabled selected>heure</option>
                     <option *ngFor="let item of horaireHeure">{{item}}</option>
                 </select>
