Travail sur le dynamisme

--- a/src/app/info-rdv/info-rdv.component.html
+++ b/src/app/info-rdv/info-rdv.component.html
@@ -11,5 +11,5 @@
     <img src="../assets/wait.png">
   </div>
   {{apt.start}} à {{apt.end}}<br />
-  <i>{{apt.id}}</i>
+  <i>{{setPractitionerName(apt.id)}}</i>
 </div>
