Finalisation du projet

--- a/src/app/info-rdv/info-rdv.component.html
+++ b/src/app/info-rdv/info-rdv.component.html
@@ -11,6 +11,6 @@
     <img src="../assets/wait.png">
   </div>
   {{apt.datestart | date:'dd/MM/yyyy HH:ss'}} à {{apt.dateend | date:'dd/MM/yyyy HH:ss'}}<br />
-  <i>{{apt.id}}</i>
   <p>{{apt.pracname }}</p>
+  <p>{{apt.comment}}</p>
 </div>
