le petit gras pour amaury

--- a/src/app/info-rdv/info-rdv.component.html
+++ b/src/app/info-rdv/info-rdv.component.html
@@ -12,5 +12,5 @@
   </div>
   {{apt.datestart | date:'dd/MM/yyyy HH:ss'}} à {{apt.dateend | date:'dd/MM/yyyy HH:ss'}}<br />
   <p>{{apt.pracname }}</p>
-  <p>{{apt.comment}}</p>
+  <p><b>Commentaire du médecin : </b>{{apt.comment}}</p>
 </div>
